# audio-analysis-mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: analyze-audio.md
.claude/skills/analyze-audio-iterations/: SKILL.md
docs/: DESIGN.md
src/audio_analysis_mcp/: __init__.py  server.py
