[project]
name = "audio-analysis-mcp"
version = "0.1.0"
description = "MCP server for audio analysis"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "librosa>=0.10.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/audio_analysis_mcp"]
